# retail-analytics

./: .gitignore  Dockerfile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
bronze_to_silver/models/: dim_calendar.sql  dim_channel.sql  dim_customer.sql  (+5 more)
dashboards/: app.py  technical_app.py
data_quality/: __init__.py  checks.py  freshness.py  report.py
docs/: architecture.md  data_dictionary.md  feature_catalog.md  github_portfolio_summary.md  model_cards.md  source_register.md  technical_report.md  technical_report_portfolio.md
features/: __init__.py  calendar_features.py  customer_features.py  demand_features.py  feature_store.py  inventory_features.py  product_features.py
infra/: main.tf  outputs.tf  variables.tf
ingestion/: __init__.py  config.py  ebay_listings.py  google_trends.py  ons_internet_sales.py  ons_retail_sales.py  open_beauty_facts.py  open_meteo_weather.py  shopify_products.py  uci_online_retail.py  uk_bank_holidays.py  uk_trade_data.py
models/: __init__.py  churn_prediction.py  customer_segmentation.py  demand_forecast.py  inventory_scoring.py  model_utils.py  trend_detection.py
monitoring/: __init__.py  model_monitor.py  pipeline_monitor.py
orchestration/: __init__.py  common.py  daily_pipeline.py  run_pipeline.py  weekly_pipeline.py
raw_to_bronze/: __init__.py  bronze_loader.py
serving/: __init__.py  api.py
synthetic/: __init__.py  config.py  generate_costs.py  generate_crm.py  generate_inventory.py  generate_transactions.py  seed_all.py
tests/: __init__.py  test_models.py  test_orchestration.py
